--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  color: goldenrod;
+  color: rgb(94, 11, 91);
   font-family: "Trebuchet MS", "Comic Sans MS", cursive;
   margin: 0;
 }
